<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/security"
        android:textStyle="bold"
        android:textSize="@dimen/dimen_16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="@dimen/dimen_16dp"
        android:elevation="32dp"
        app:cardBackgroundColor="#ef727b"
        app:cardCornerRadius="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@+id/title">


    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
    <TextView
        android:id="@+id/text_sos"
        android:elevation="16dp"
        app:layout_constraintTop_toTopOf="@+id/pink_card"
        app:layout_constraintLeft_toLeftOf="@+id/pink_card"
        android:layout_margin="@dimen/dimen_16dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sos" />

    <TextView
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/pink_card"
        android:layout_margin="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@+id/text_sos"
        app:layout_constraintEnd_toStartOf="@+id/sos_img"
        android:elevation="8dp"
        android:text="@string/in_case_of_emergency_keep_telling_family_members_to_contact_me"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/sos_img"
        android:src="@drawable/ic_sos"
        android:layout_margin="@dimen/dimen_16dp"
        app:layout_constraintTop_toTopOf="@+id/pink_card"
        app:layout_constraintEnd_toEndOf="@+id/pink_card"
        app:layout_constraintBottom_toBottomOf="@+id/pink_card"
        android:elevation="8dp"
        android:layout_width="96dp"
        android:layout_height="96dp"/>


    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/green_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="@dimen/dimen_16dp"
        android:layout_marginTop="308dp"
        app:cardBackgroundColor="@color/green"
        app:cardCornerRadius="@dimen/dimen_16dp"
        android:elevation="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pink_card" />
    <TextView
        android:id="@+id/text_guard"
        android:elevation="16dp"
        app:layout_constraintTop_toTopOf="@+id/green_card"
        app:layout_constraintLeft_toLeftOf="@+id/green_card"
        android:layout_margin="@dimen/dimen_16dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guard" />

    <TextView
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/green_card"
        android:layout_margin="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@+id/text_guard"
        app:layout_constraintEnd_toStartOf="@+id/guard_img"
        android:elevation="8dp"
        android:text="@string/open_when_you_are_on_a_potentially_dangerous_journey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/guard_img"
        android:src="@drawable/ic_guard"
        android:layout_margin="@dimen/dimen_16dp"
        app:layout_constraintTop_toTopOf="@+id/green_card"
        app:layout_constraintEnd_toEndOf="@+id/green_card"
        app:layout_constraintBottom_toBottomOf="@+id/green_card"
        android:elevation="8dp"
        android:layout_width="96dp"
        android:layout_height="96dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>