<?xml version="1.0" encoding="utf-8"?>


    <com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        app:cardCornerRadius="@dimen/dimen_16dp"
        app:cardElevation="@dimen/dimen_16dp"
        app:cardBackgroundColor="@color/card_bg"
        app:layout_constraintTop_toTopOf="parent" >

    <androidx.constraintlayout.widget.ConstraintLayout

        android:padding="@dimen/dimen_16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_user"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:elevation="@dimen/dimen_16dp"
            android:src="@drawable/ic_sos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/shubham_kumar"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_user"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_location"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="12dp"
            android:elevation="@dimen/dimen_16dp"
            android:src="@drawable/icon_location"
            app:layout_constraintStart_toStartOf="@id/userName"
            app:layout_constraintTop_toBottomOf="@id/userName"
            app:tint="@color/green" />

        <TextView
            android:maxLines="2"
            android:ellipsize="end"
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:elevation="@dimen/dimen_16dp"
            android:text="@string/add"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_location"
            app:layout_constraintTop_toBottomOf="@id/userName" />

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:elevation="@dimen/dimen_16dp"
            android:text="@string/time"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/userName" />

        <ImageView
            android:id="@+id/img_battery"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:elevation="@dimen/dimen_16dp"
            android:src="@drawable/ic_battery"
            app:layout_constraintStart_toStartOf="@id/img_user"
            app:layout_constraintTop_toBottomOf="@id/img_user"
            app:tint="@color/green" />

        <TextView
            android:id="@+id/battery_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:elevation="@dimen/dimen_16dp"
            android:text="90%"
            android:textColor="@color/green"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/img_battery"
            app:layout_constraintStart_toEndOf="@id/img_battery"
            app:layout_constraintTop_toTopOf="@id/img_battery" />


        <ImageView
            android:id="@+id/img_distance"
            android:layout_width="16dp"
            android:layout_height="24dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:elevation="@dimen/dimen_16dp"
            android:src="@drawable/ic_cancel_schedule_send"
            app:layout_constraintStart_toEndOf="@id/battery_percent"
            app:layout_constraintTop_toBottomOf="@id/img_user"
            app:tint="#b197dc" />

        <TextView
            android:id="@+id/distance_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:elevation="@dimen/dimen_16dp"
            android:text="223M"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/img_battery"
            app:layout_constraintStart_toEndOf="@id/img_distance"
            app:layout_constraintTop_toTopOf="@id/img_battery" />

        <ImageView
            android:id="@+id/img_wifi"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="41dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:elevation="@dimen/dimen_16dp"
            android:src="@drawable/ic_cell_wifi"
            app:layout_constraintStart_toEndOf="@id/distance_value"
            app:layout_constraintTop_toBottomOf="@id/img_user"
            app:tint="@color/green" />

        <TextView
            android:id="@+id/wifi_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:elevation="@dimen/dimen_16dp"
            android:text="@string/wifi"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/img_battery"
            app:layout_constraintStart_toEndOf="@id/img_wifi"
            app:layout_constraintTop_toTopOf="@id/img_battery" />

        <ImageView
            android:id="@+id/img_call"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:elevation="@dimen/dimen_16dp"
            android:src="@drawable/ic_call"
            app:layout_constraintBottom_toBottomOf="@id/img_battery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/img_battery"
            app:tint="@color/black" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>

